<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item android:title="" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_question_in_circular_button"
        android:title="@string/help_feedback" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_round_info_button"
        android:title="@string/about" />
  </group>
</menu>
