<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="420dp"
    android:background="@drawable/btnstylebg2"
    android:padding="5dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/txtclose2"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/close"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/asdas"
        android:layout_width="50dp"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/aboutlogo" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/instruction"
        android:textColor="@color/yellow"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/instruction1"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/instruction2"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/instruction3"
        android:textColor="@color/yellow"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/instruction5"
        android:textColor="@color/yellow"
        android:textSize="15sp" />
</LinearLayout>