<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrayMain">

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/helpandfeedback"
        android:textColor="@color/text"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/hfmessage"
       android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/developers"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/btnstylebg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick="ShowPopUp4"
        android:text="@string/clickhere"
        android:textColor="@color/superDarkGray"
        android:textSize="18dp" />


</RelativeLayout>