<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrayMain">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/aboutus"
        android:textColor="@color/text"
        android:textSize="30dp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/btnstylebg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:onClick="ShowPopUp"
        android:text="@string/about"
        android:textColor="@color/darkGrayMain"
        android:textSize="20dp"
        android:verticalScrollbarPosition="defaultPosition" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@drawable/btnstylebg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:onClick="ShowPopUp2"
        android:text="@string/instruction"
        android:textColor="@color/darkGrayMain"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btnstylebg"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:backgroundTint="@color/yellow"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:onClick="ShowPopUp3"
        android:text="@string/developers"
        android:textColor="@color/darkGrayMain"
        android:textSize="20dp" />


</RelativeLayout>