<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/btnstylebg2"
    android:layout_gravity="center"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    >
    <!--android:backgroundTint="@color/superDarkGray"-->


    <TextView
        android:id="@+id/txtclose"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/close"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/asdas"
        android:layout_width="50dp"
        android:layout_height="20dp" />
    <!--android:background="@drawable/circlebackground"-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/aboutlogo" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/about"
        android:textColor="@color/yellow"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="SmartDoks Share Mo Lang v1.0 beta"
        android:textColor="@color/yellow"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/about1"
        android:textColor="@color/yellow"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/about2"
        android:textColor="@color/yellow"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/yellow"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/about3"
        android:textColor="@color/yellow"
        android:textSize="16sp" />

</LinearLayout>