<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:background="@drawable/btnstylebg2"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".feedback">

    <TextView
        android:id="@+id/txtclose4"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/close"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/asdas"
        android:layout_width="50dp"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/helpandfeedback"
        android:textColor="@color/text2"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/rateMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/rateme"
        android:textColor="@color/text2"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/yellow"
        android:progressBackgroundTint="@color/darkGrayMain"
        android:layout_marginTop="15dp"
        android:numStars="5"
        android:rating="3.0"
        android:stepSize="0.2" />

    <TextView
        android:id="@+id/feedbackMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/help_feedback"
        android:textColor="@color/text2"
        android:textSize="20sp" />


    <EditText
    android:id="@+id/feedbackMessage"
    android:layout_width="268dp"
    android:layout_height="79dp"
    android:ems="10"
        android:layout_gravity="center"
        android:textAlignment="center"
    android:textSize="23sp"
        android:layout_marginTop="25sp"
    android:textColor="@color/text2"
    android:gravity="center"
    android:inputType="textMultiLine" />

    <Button
        android:id="@+id/feedbackSubmit"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/btnstylebg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat"
        android:text="@string/submit"
        android:textColor="@color/darkGrayMain"
        android:textSize="18sp" />

    <!--<TextView-->
        <!--android:id="@+id/lblResult"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Result : "-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:textColor="#F0CD19"-->
        <!--tools:layout_editor_absoluteX="137dp"-->
        <!--tools:layout_editor_absoluteY="347dp" />-->

    <!--<TextView-->
        <!--android:id="@+id/txtRatingValue"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="sdas"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--tools:layout_editor_absoluteX="226dp"-->
        <!--tools:layout_editor_absoluteY="347dp" />-->
</LinearLayout>