<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrayMain">

    <TextView
    android:id="@+id/shareMoNaTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="116dp"
    android:layout_marginTop="76dp"
    android:layout_marginEnd="118dp"
    android:fontFamily="@font/montserrat"
    android:text=" "
    android:textColor="#F0CD19"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginStart="116dp"-->
<!--    android:layout_marginTop="140dp"-->
<!--    android:layout_marginEnd="118dp"-->
<!--    android:fontFamily="@font/montserrat"-->
<!--    android:text="@string/tagline"-->
<!--    android:textColor="@color/text"-->
<!--    android:textSize="25sp"-->
<!--    android:textStyle="bold"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent" />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/tagline"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold"
 />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/tagline2"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:textStyle="bold" />


    <pl.droidsonroids.gif.GifImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_image"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sharekolang"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="540dp"
        android:background="@drawable/btnstylebg"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/send"
        android:textColor="@color/darkGrayMain"
        android:textSize="18sp" />
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="610dp"
        tools:ignore="MissingConstraints" />
<!--    <Button-->
<!--        android:id="@+id/receive"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginStart="102dp"-->
<!--        android:layout_marginEnd="101dp"-->
<!--        android:layout_marginBottom="100dp"-->
<!--        android:background="@drawable/btnstylebg"-->
<!--        android:backgroundTint="@color/yellow"-->
<!--        android:fontFamily="@font/montserrat_semibold"-->
<!--        android:text="@string/receive"-->
<!--        android:textColor="@color/darkGrayMain"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
    <!--    android:backgroundTint="@color/darkGrayMain"-->


    <TextView
        android:id="@+id/txt_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="194dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="54dp"
        android:text=" "
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharekolang" />


</RelativeLayout>